@@ -5,6 +5,7 @@ cm4all-beng-proxy (0.7.11) unstable; urgency=low
     enabled
   * widget-http, inline-widget: check Content-Encoding before processing
   * file-handler: send "Vary: Accept-Encoding" for compressed response
+  * header-forward: support duplicate headers
 
  --
 
